chore: remove deprecated user-import service
Remove old user-import.service.ts file that was replaced by the new
users-import.service.ts with enhanced CSV/Excel import functionality.

--- a/package.json
+++ b/package.json
@@ -34,16 +34,20 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.10",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/papaparse": "^5.5.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "mysql2": "^3.16.0",
+    "papaparse": "^5.5.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
