--- a/package.json
+++ b/package.json
@@ -35,15 +35,19 @@
     "@nestjs/platform-express": "^11.1.10",
     "@nestjs/typeorm": "^11.0.0",
     "@types/papaparse": "^5.5.2",
+    "@types/pdfkit": "^0.17.4",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "mysql2": "^3.16.0",
     "papaparse": "^5.5.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.28",
