--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.10",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/typeorm": "^11.0.0",
     "@types/papaparse": "^5.5.2",
     "@types/pdfkit": "^0.17.4",
